# examples

./: .gitignore  Makefile  README.md  docker-compose.yaml
email-agent/: .env.template  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  docker-compose.yaml.bak  main.py  pyproject.toml
email-agent/utils/: models.py  send_email.py
email-agent/utils/tools/: __init__.py  send_email.py
wa-customer-support-bot/: .env.template  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  docker-compose.yaml.bak  logger.py  main.py  pyproject.toml
wa-customer-support-bot/models/: __init__.py  wati.py  webhook.py
