[project]
name = "email-agent"
version = "0.1.0"
description = "Agent that can intract with email service to send emails upon request."
authors = [
    {name = "Devasheesh Mishra",email = "devasheeshmishra4@gmail.com"}
]
readme = "README.md"
requires-python = ">3.12,<4.0"
package-mode = false
dependencies = [
    "recallrai (>=0.1.1,<0.2.0)",
    "openai (>=1.78.1,<2.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "azure-communication-email (>=1.0.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
